* 2013-07-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 24534: Added import/export of distribution lists in csv-file  

* 2013-07-23 - marc.arens@open-xchange.com

 - Fix for bug 27712: Set maxForm- and maxBufferedPostSize to com.openexchange.servlet.maxBodySize

* 2013-07-23 - jan.bauerdick@open-xchange.com

 - Fix for bug 27718: Changed defaultAvailability in AvailabilityChecker

* 2013-07-22 - tobias.friedrich@open-xchange.com

 - Fix for bug 27663: Always include ORDER BY columns in SELECT clause when using UNION SELECTs 
 - Fix for bug 27496: Increment and decrement "NumberOfWebDAVUserConnections" when processing WebDAV requests
 - Fix for bug 27439: Enhanced documentation for "com.openexchange.caldav.interval.start" and -".end"
  
* 2013-07-22 - thorben.betten@open-xchange.com

 - Fix for bug 27669: Added null guard when counting SIEVE action commands
 - Fix for bug 27604: Fixed multiple problems occurring in customer environment
 - Fix for bug 27671: Allow an "insecure" XML parser implementation needed for Apache CXF v2.6.8

* 2013-07-19 - thorben.betten@open-xchange.com

 - Fix for bug 27539: Sanitize Content-Type header if 'javax.mail.internet.MimeMessage.saveChanges()' fails
 - Fix for bug 27645: Chunk-wise copy/move of messages from one account to another
 - Fix for bug 27639: Ignore trailing non-LDH characters on IDN-to-ACE conversion

* 2013-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 27232: Reconnect if mail part's folder has been closed in the meantime
 - Fix for bug 27641: Lowered log level for charset auto-detection triggered by invalid charset name

* 2013-07-18 - jan.bauerdick@open-xchange.com

 - Fix for bug 27579: Check if connection leads to configdb

* 2013-07-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 27554: Removed unneeded System.out.println
 - Fix for bug 26913: Update task to delete redundant keys & removed them from table definitions

* 2013-07-17 - thorben.betten@open-xchange.com
